Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25698

SIGSEGV in wsrep_should_replicate_ddl

Details

    Description

      SET GLOBAL wsrep_mode=STRICT_REPLICATION;
      CREATE VIEW v AS SELECT * FROM JSON_TABLE ('{"a":0}',"$" COLUMNS (a DECIMAL(1,1) path '$.a')) foo;
      

      Leads to:

      10.6.1 370b310b1d67ad42df96b75c3876fdcf67a8694f (Optimized)

      Core was generated by `/test/GAL_MD120521-mariadb-10.6.1-linux-x86_64-opt/bin/mysqld --defaults-file=/'.
      Program terminated with signal SIGSEGV, Segmentation fault.
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=11)
          at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      [Current thread is 1 (Thread 0x149248682700 (LWP 2349932))]
      (gdb) bt
      #0  __pthread_kill (threadid=<optimized out>, signo=signo@entry=11) at ../sysdeps/unix/sysv/linux/pthread_kill.c:56
      #1  0x0000564ae5c456df in my_write_core (sig=sig@entry=11) at /test/10.6_opt/mysys/stacktrace.c:424
      #2  0x0000564ae56c53c0 in handle_fatal_signal (sig=11) at /test/10.6_opt/sql/signal_handler.cc:343
      #3  <signal handler called>
      #4  wsrep_should_replicate_ddl (hton=0x0, thd=0x149210000c58) at /test/10.6_opt/sql/wsrep_mysqld.cc:2229
      #5  wsrep_should_replicate_ddl (thd=0x149210000c58, hton=0x0) at /test/10.6_opt/sql/wsrep_mysqld.cc:2224
      #6  0x0000564ae59abed5 in wsrep_should_replicate_ddl_iterate (thd=thd@entry=0x149210000c58, table_list=table_list@entry=0x1492100127d0) at /test/10.6_opt/sql/handler.h:1736
      #7  0x0000564ae557b267 in mysql_create_view (thd=thd@entry=0x149210000c58, views=views@entry=0x149210010a08, mode=VIEW_CREATE_NEW) at /test/10.6_opt/sql/sql_view.cc:459
      #8  0x0000564ae54bcd6e in mysql_execute_command (thd=0x149210000c58) at /test/10.6_opt/sql/sql_parse.cc:5788
      #9  0x0000564ae54aa865 in mysql_parse (thd=0x149210000c58, rawbuf=<optimized out>, length=<optimized out>, parser_state=<optimized out>) at /test/10.6_opt/sql/sql_parse.cc:8018
      #10 0x0000564ae54aa2b6 in wsrep_mysql_parse (thd=0x149210000c58, rawbuf=0x149210010880 "CREATE VIEW v AS SELECT * FROM JSON_TABLE ('{\"a\":0}',\"$\" COLUMNS (a DECIMAL(1,1) path '$.a')) foo", length=97, parser_state=0x149248681440) at /test/10.6_opt/sql/sql_parse.cc:7832
      #11 0x0000564ae54b7d86 in dispatch_command (command=COM_QUERY, thd=0x149210000c58, packet=0x1492100084e9 "CREATE VIEW v AS SELECT * FROM JSON_TABLE ('{\"a\":0}',\"$\" COLUMNS (a DECIMAL(1,1) path '$.a')) foo", packet_length=<optimized out>, blocking=<optimized out>) at /test/10.6_opt/sql/sql_class.h:1333
      #12 0x0000564ae54b88a8 in do_command (thd=0x149210000c58, blocking=blocking@entry=true) at /test/10.6_opt/sql/sql_parse.cc:1406
      #13 0x0000564ae55bc157 in do_handle_one_connection (connect=<optimized out>, put_in_cache=true) at /test/10.6_opt/sql/sql_connect.cc:1410
      #14 0x0000564ae55bc4bd in handle_one_connection (arg=arg@entry=0x564ae7dd8cd8) at /test/10.6_opt/sql/sql_connect.cc:1312
      #15 0x0000564ae593eabd in pfs_spawn_thread (arg=0x564ae7dd95a8) at /test/10.6_opt/storage/perfschema/pfs.cc:2201
      #16 0x000014927d0b8609 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #17 0x000014927cca7293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Bug confirmed present in:
      MariaDB: 10.6.1 (dbg), 10.6.1 (opt)

      Bug (or feature/syntax) confirmed not present in:
      MariaDB: 10.2.39 (dbg), 10.2.39 (opt), 10.3.30 (dbg), 10.3.30 (opt), 10.4.20 (dbg), 10.4.20 (opt), 10.5.11 (dbg), 10.5.11 (opt)

      Attachments

        Activity

          People

            jplindst Jan Lindström (Inactive)
            ramesh Ramesh Sivaraman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.