MDEV-25698 regression fix: SIGSEGV in wsrep_should_replicate_ddl

New fix corresponding to the current implementation of JSON tables.